** New: This encounter should now trigger.
** New: Added trigger for Phase Two (Magma Cannons)
** New: Added trigger for Final Phase (Dragon Eggs)
* Maelforge - Final
** New: This encounter should now trigger.
** New: Added Personal Alert, Mechanic Spy and Timer for Hellfire.
** New: Added Personal Alert for Earthen Fissure.
** New: Added Personal Alert for Fiery Fissure.

Translations
* French updates
----
v1.1.7

Unit Tracking
* Change: Moved Percent triggers in to a unified location within Unit:Update()

System
* Removed: All Watchdog diagnosis tracking and saving have been removed including associated commands.
* Fixed: Errors related to the diagnostic tools will now be gone.

Hammerknell Fortress
* Akylios
** Change: Removed P2 percentage trigger and replaced with the more reliable Emote trigger.

----
v1.1.6

System
* Change: Start-up order has changed again slightly.

Tank-Swap
* Fixed: (Rare) error where Boss objects could become nil.

Unit Tracking
* Fixed: (Rare) error could be thrown in the Unit Tracker's Unit:Update() with nil values for Health. (This could cause inconsistency)

Infernal Dawn.
* Laethys
** New: Added Trigger for the start of Phase 2 combat.
** New: Added Timers for first and second Laethic Gold.
** New: Added 5 second warning for the start of Laethic Gold's cast.

French Translations
* Updated!
----
v1.1.5

Mechanic Spy
* Fixed: Timers were not activating correctly.

Unit Tracker
* Fixed: Accuracy was out too much to be reliable.

Infernal Dawn
* Laeyths
** Change: Phase 2 now triggers from the emote, not a percantage.
** New: Added Timer for the Phase Two transition period. Until Phase Two combat begins.

Primeval Feast
* Grandmaster Atrophinius
** New: Added Phase tracking.
** New: Added Alert for Rampage duration with countdown.
** New: Added Enrage Timer.
** New: Added Timer for Rampage.

----
v1.1.4

Mechanic Timers